--- a/HabbityTabbity/HabbityTabbity/Base.lproj/Main.storyboard
+++ b/HabbityTabbity/HabbityTabbity/Base.lproj/Main.storyboard
@@ -389,23 +389,112 @@
             </objects>
             <point key="canvasLocation" x="35" y="741"/>
         </scene>
-        <!--View Controller-->
+        <!--Dashboard View Controller-->
         <scene sceneID="Xu5-Hy-BpT">
             <objects>
-                <viewController id="6Vz-jW-FuI" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="DashboardViewController" automaticallyAdjustsScrollViewInsets="NO" id="6Vz-jW-FuI" customClass="DashboardViewController" customModule="HabbityTabbity" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="7Kt-UO-9X0"/>
                         <viewControllerLayoutGuide type="bottom" id="ulj-PA-UUY"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="oED-wq-cv8">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fBx-XI-pOa">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dashboard" translatesAutoresizingMaskIntoConstraints="NO" id="pvk-yt-Yi1">
+                                        <rect key="frame" x="140.5" y="154.5" width="94" height="94"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="94" id="Y4k-ry-jXc"/>
+                                            <constraint firstAttribute="height" constant="94" id="fzh-Qd-sh8"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gPl-wl-G6r">
+                                        <rect key="frame" x="8" y="258" width="359" height="97"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="97" id="k87-NI-4r8"/>
+                                        </constraints>
+                                        <string key="text">No Habits
+Go on and add some!</string>
+                                        <fontDescription key="fontDescription" name="ChalkboardSE-Light" family="Chalkboard SE" pointSize="21"/>
+                                        <color key="textColor" red="0.019607843140000001" green="0.1960784314" blue="0.4039215686" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="pvk-yt-Yi1" firstAttribute="centerX" secondItem="fBx-XI-pOa" secondAttribute="centerX" id="WWO-16-f7U"/>
+                                    <constraint firstItem="gPl-wl-G6r" firstAttribute="top" secondItem="pvk-yt-Yi1" secondAttribute="bottom" constant="9.5" id="Xsp-ce-YQS"/>
+                                    <constraint firstAttribute="trailing" secondItem="gPl-wl-G6r" secondAttribute="trailing" constant="8" id="eHx-hb-iay"/>
+                                    <constraint firstItem="pvk-yt-Yi1" firstAttribute="centerY" secondItem="fBx-XI-pOa" secondAttribute="centerY" constant="-100" id="kDJ-hz-hZ6"/>
+                                    <constraint firstItem="gPl-wl-G6r" firstAttribute="leading" secondItem="fBx-XI-pOa" secondAttribute="leading" constant="8" id="tRZ-sj-81q"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="fBx-XI-pOa" firstAttribute="top" secondItem="7Kt-UO-9X0" secondAttribute="bottom" id="8Wg-KG-jTp"/>
+                            <constraint firstAttribute="trailing" secondItem="fBx-XI-pOa" secondAttribute="trailing" id="BsQ-f5-FSm"/>
+                            <constraint firstItem="fBx-XI-pOa" firstAttribute="leading" secondItem="oED-wq-cv8" secondAttribute="leading" id="Ig1-eD-GdQ"/>
+                            <constraint firstItem="ulj-PA-UUY" firstAttribute="top" secondItem="fBx-XI-pOa" secondAttribute="bottom" id="Xfj-e7-lHZ"/>
+                        </constraints>
                     </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="noHabitsView" destination="fBx-XI-pOa" id="Bi7-0O-v2n"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="o0s-Na-fvc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="898" y="734"/>
+            <point key="canvasLocation" x="896.79999999999995" y="732.68365817091455"/>
+        </scene>
+        <!--Add New Habit View Controller-->
+        <scene sceneID="Njs-0S-foq">
+            <objects>
+                <viewController storyboardIdentifier="AddNewHabitViewController" id="9Uf-8a-rlU" customClass="AddNewHabitViewController" customModule="HabbityTabbity" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="fSb-D9-mi6"/>
+                        <viewControllerLayoutGuide type="bottom" id="CVz-Y2-QtT"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ila-cu-d9H">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="omb-1C-BcL">
+                                <rect key="frame" x="0.0" y="64" width="375" height="2"/>
+                                <color key="backgroundColor" red="0.96078431369999995" green="0.64705882349999999" blue="0.13725490200000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="2" id="ohW-Va-ulo"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b5f-8Q-vmU">
+                                <rect key="frame" x="20" y="86" width="335" height="561"/>
+                                <color key="backgroundColor" red="0.019607843140000001" green="0.1960784314" blue="0.4039215686" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="b5f-8Q-vmU" secondAttribute="trailing" constant="20" id="2Ly-JI-QMP"/>
+                            <constraint firstItem="omb-1C-BcL" firstAttribute="top" secondItem="fSb-D9-mi6" secondAttribute="bottom" id="54o-uE-5Se"/>
+                            <constraint firstItem="CVz-Y2-QtT" firstAttribute="top" secondItem="b5f-8Q-vmU" secondAttribute="bottom" constant="20" id="OwR-ih-JBg"/>
+                            <constraint firstAttribute="trailing" secondItem="omb-1C-BcL" secondAttribute="trailing" id="UX1-lp-JaC"/>
+                            <constraint firstItem="b5f-8Q-vmU" firstAttribute="leading" secondItem="ila-cu-d9H" secondAttribute="leading" constant="20" id="fg4-gg-MpF"/>
+                            <constraint firstItem="omb-1C-BcL" firstAttribute="leading" secondItem="ila-cu-d9H" secondAttribute="leading" id="wGM-0k-aQg"/>
+                            <constraint firstItem="b5f-8Q-vmU" firstAttribute="top" secondItem="omb-1C-BcL" secondAttribute="bottom" constant="20" id="y9y-T0-xBx"/>
+                        </constraints>
+                    </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="baseView" destination="b5f-8Q-vmU" id="pSj-7X-6CX"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="m7y-r6-Eca" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1805.5999999999999" y="732.68365817091455"/>
         </scene>
         <!--Sign Up View Controller-->
         <scene sceneID="HgU-a9-5jc">
@@ -571,6 +660,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="dashboard" width="25" height="25"/>
         <image name="signup" width="50" height="50"/>
     </resources>
 </document>
